# glowShot

./: .env.example  .gitignore  README.md  package-lock.json  package.json  vite.config.ts
src/: app.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  macos_dock.rs  main.rs
src/lib/components/: ToastRegion.svelte
src/lib/components/snapforge/: AppHeader.svelte  CreationsGallery.svelte  DashboardMockup.svelte  EditorCanvas.svelte  LeftTools.svelte  RightPanel.svelte  ShareTemplatesPanel.svelte  TemplatesPlaceholder.svelte
src/lib/export/: save-frame-png.ts
src/lib/server/: s3-config.ts  s3-upload.ts
src/lib/snapforge/: api-public.ts  clipboard-bridge.ts  fetch-photo-gallery.ts  new-project-flow.ts  orientation-presets.ts  upload-creation-s3.ts
src/lib/stores/: creations.ts  editor.ts  toast.ts
src/lib/utils/: error-message.ts  read-image-file.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/api/photos/: +server.ts
src/routes/api/photos/proxy/: +server.ts
src/routes/api/photos/upload/: +server.ts
