[package]
name = "glowshot"
version = "0.1.0"
description = "GlowShot — mockups and captures"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "GlowShot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "GlowShot"
path = "src/main.rs"

[lib]
name = "glowshot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
base64 = "0.22"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri = { version = "2.10.3", features = ["image-png", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.2", default-features = false, features = ["std"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
  "NSApplication",
  "NSMenu",
  "NSMenuItem",
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
  "NSObject",
  "NSString",
] }
